--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 #lista-de-afazeres button {
+    padding: 0;
     cursor: pointer;
 }
 
@@ -27,6 +28,7 @@
 
 body {
     height: 100vh;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
