--- a/style.css
+++ b/style.css
@@ -132,6 +132,8 @@ input[type="text"] {
 #lista-de-afazeres label {
     font-size: 1.3rem;
     text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
     cursor: pointer;
 }
 
@@ -172,18 +174,24 @@ input[type="text"] {
     overflow-y: auto;
 }
 
-/*
 #dica {
     width: 200px;
     height: 60px;
+    padding: 0 7px;
     border-radius: 3px 3px 0 0;
     font-size: 2rem;
     position: absolute;
     top: -60px;
     left: 60px;
-    background-color: rgb(211, 142, 53);
+    display: flex;
+    align-items: center;
+    background-color: rgb(208, 151, 75);
+    background-image: url(imagens/Dica.svg);
+    background-repeat: no-repeat;
+    background-position-x: right 7px;
+    background-position-y: center;
+    cursor: default;
 }
-*/
 
 @keyframes slide-direita {
     0% {
